--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -82,7 +82,8 @@ padding-right: 10px;
   padding-right: 10px;
 }
 
-#procon{
+#procon,
+#eg{
   display: flex;
   justify-content: center;
   text-align: center;
@@ -96,4 +97,15 @@ padding-right: 10px;
   color: white;
   font-size: 20px;
   padding: 5px;
+}
+.add,
+.time,
+.out{
+  width: 200px;
+  background-color: white;
+  border: 5px solid #ff5c5c;
+  color: #ff5c5c;
+  font-size: 20px;
+  padding: 10px;
+  margin: 10px;
 }
